# Lab_arduino

./: README.md
Software1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Software1/DOC/html/: arduinoprueba_8cpp.html  main_8cpp.html
Software1/DOC/htmlArduino/: dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp_source.html
Software1/DOC/htmlSoftware1/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  arduinoprueba_8cpp_source.html  classes.html  classparticipant-members.html  classparticipant.html  config__tty_8cpp.html  config__tty_8cpp_8o_8d.html  config__tty_8cpp_8o_8d_source.html  config__tty_8cpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_1e771ff450ae847412a8c28572c155bb.html  dir_30fa221b832ee1abaf9fddf000142d26.html  dir_446fa3779613ae65430f5581e4f4637e.html  dir_68f7dbe07457cb7561a1f284d3f33cd5.html  dir_7b6a6a8d016e61851534849ba32b4bd8.html  dir_9f243edd7a82b615ef6ec618a5e62540.html  dir_a7ad92605c0732c583ab23ed7e226220.html  files.html  funciones__gr4_8cpp.html  funciones__gr4_8cpp_8o_8d.html  funciones__gr4_8cpp_8o_8d_source.html  funciones__gr4_8cpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  (+17 more)
Software1/INCLUDE/: lib_grupo4.h  library.h
Software1/SRC/: config_tty.cpp  funciones_gr4.cpp  main.cpp  participant.cpp
(+68 files in other folders)
